--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
 absl-py==0.9.0
 astor==0.8.1
+attrs==19.3.0
 cachetools==4.0.0
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+dill==0.3.1.1
+future==0.18.2
 gast==0.2.2
 google-auth==1.10.0
 google-auth-oauthlib==0.4.1
 google-pasta==0.1.8
+googleapis-common-protos==1.6.0
 grpcio==1.26.0
 h5py==2.10.0
 idna==2.8
@@ -20,6 +24,7 @@ numpy==1.18.0
 oauthlib==3.1.0
 opt-einsum==3.1.0
 Pillow==6.2.1
+promise==2.3
 protobuf==3.11.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
@@ -31,9 +36,12 @@ rsa==4.0
 scipy==1.4.1
 six==1.13.0
 tensorboard==2.0.2
+tensorflow-datasets==1.3.2
 tensorflow-estimator==2.0.1
 tensorflow-gpu==2.0.0
+tensorflow-metadata==0.15.2
 termcolor==1.1.0
+tqdm==4.41.0
 urllib3==1.25.7
 Werkzeug==0.16.0
 wrapt==1.11.2
